--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MAD_Lab3</string>
+    <string name="app_name">Visione Utente</string>
+
     <string name="pick_date">Pick a date!</string>
     <string name="pick_time">Pick a time!</string>
     <string name="sunday">Sunday</string>
@@ -23,4 +24,22 @@
     <string name="december">December</string>
     <string name="are_you_staying">Eat in or take-away?</string>
     <string name="howmany">How many seats do you want to book?</string>
+
+    <!-- Pagina principale -->
+    <string name="ricerca">research ...</string>
+    <string name="titolo_ricerca">Find your restaurant:</string>
+    <string name="info_ricerca">(make searches by name of restaurant or by place)</string>
+    <string name="titolo_offerte_vicine">Some offers near you ...</string>
+
+    <!-- navigation drawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="eseguireLogin">Please, log in</string>
+    <string name="modifica_profilo">Modifica Profilo</string>
+    <string name="prenotazioni">Prenotazioni</string>
+    <string name="contattaci">Contattaci</string>
+    <string name="segnala_problema">Segnala Problema</string>
+    <string name="esegui_login">Esegui Login</string>
+
+
 </resources>
