Continua sviluppo prenotazione

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,7 @@
     <string name="add_userphoto_activity_title">Add a new photo</string>
 
 
+    <string name="seats_string">seats</string>
+
+
 </resources>
