--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,10 @@
     <string name="your_reservation">Your reservation</string>
     <string name="total">Total :</string>
     <string name="notes">Notes for the restaurant:</string>
+    <string name="offer">Offer</string>
+    <string name="dish">Dish</string>
+    <string name="quantity">Quantity</string>
+    <string name="offer_name">Offer name:</string>
 
 
 </resources>
