--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
     <string name="dish">Dish</string>
     <string name="quantity">Quantity</string>
     <string name="offer_name">Offer name:</string>
+    <string name="details">Details:</string>
+    <string name="available_on">Available on:</string>
 
 
 </resources>
