gestione lista ricerca e passaggio del ristorante corretto alla RestaurantActivity.Passiamo l'id che viene poi usato per ricercare il ristorante

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <!-- Elaborazione Ricerche -->
     <string name="titolo_elaborazioneRicerche">Restaurants found</string>
     <string name="risultati_ricerca">Search results:</string>
+    <string name="find">Find</string>
 
     <!-- Errori e messaggi di default -->
     <string name="dataSaved">DATA SAVED</string>
