continua lavoro su activity show offer, modifica al db per offerte (aggiunti giorni di disponibilità)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="details">Details:</string>
     <string name="available_on">Available on:</string>
     <string name="no_item_in_order">Please, select a dish</string>
+    <string name="today_not_available">The offer is not available today</string>
 
 
 </resources>
