--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,9 @@
     <string name="bancomat">Bancomat</string>
     <string name="seatsoutside">Seats outside</string>
     <string name="music">Music</string>
+    <string name="description">Description:</string>
+    <string name="send_mail">Send mail</string>
+    <string name="no_email_client">There is no email client installed</string>
 
 
 </resources>
