--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,9 +101,13 @@
     <string name="bancomat">Bancomat</string>
     <string name="seatsoutside">Seats outside</string>
     <string name="music">Music</string>
+    <string name="reviews_activity_title">Reviews</string>
+    <string name="toast_when_sorted">Results has been sorted</string>
     <string name="description">Description:</string>
     <string name="send_mail">Send mail</string>
     <string name="no_email_client">There is no email client installed</string>
+    <string name="numReviewsText">Avarage rank on % reviews</string>
+    <string name="orderBy">Order</string>
 
 
 </resources>
