reinstallare app , aggiornato db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,11 @@
     <string name="no_email_client">There is no email client installed</string>
     <string name="numReviewsText">Avarage rank on % reviews</string>
     <string name="orderBy">Order</string>
+    <string name="add_review_activity_title">Add review</string>
+
+    <string name="long_text">
+</string>
+    <string name="review">Review:</string>
 
 
 </resources>
