continuing reviews manaement developing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="long_text">
 </string>
     <string name="review">Review:</string>
+    <string name="reviewsStrPrev">% reviews</string>
 
 
 </resources>
