reinstallare app , aggiornato db con un nuovo ristorante per testare tutti i possibili casi (TA,R, TA e R) ora funziona correttamente la visualizzazionee orari nelle reservation ho commentato per compilare tutto ciò che riguardava la rev fragment che non è stata pushata ho aggiunto un button nella restaurant activity per fare la reservation, @fabio poi te la sistemi la grafica, era solo per testare XD spero di non imputtanare tutto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="action_settings">Settings</string>
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
-    <string name="closed_restaurant">Sorry, the restaurant is closed! </string>
+    <string name="closed_restaurant">The restaurant is closed </string>
     <string name="your_reservation">Your reservation</string>
     <string name="total">Total :</string>
     <string name="notes">Notes for the restaurant:</string>
