Gestione Ricerca - Miglioramenti grafici generali

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,13 +57,13 @@
     <string name="otherDishesAvailable">(other dishes are available)</string>
 
     <!-- Ricerche ed Elaborazione Ricerche -->
-    <string name="titolo_elaborazioneRicerche">Restaurants found</string>
+    <string name="titolo_elaborazioneRicerche">Search Results</string>
     <string name="risultati_ricerca">Search results:</string>
     <string name="search">Search</string>
     <string name="titoloLocaleDefault">Nome Locale Non Disponibile</string>
-    <string name="tipoLocaleFinder">-Type of local:</string>
-    <string name="costoFinder">-Cost:</string>
-    <string name="valutazioneFinder">-Rating:</string>
+    <string name="tipoLocaleFinder">Type of local:</string>
+    <string name="costoFinder">Cost:</string>
+    <string name="valutazioneFinder">Rating:</string>
     <string name="ricercaAvanzata">Advanced Search:</string>
     <string name="takeAway">Take Away</string>
     <string name="restaurant">Restaurant</string>
