nuova libreria per i FAB, aggiornamento pagina ristorante per aggiungere review, photo e prenotazione

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,8 @@
     <string name="rate_dishes_message">If you say YES you can assign a rate to any dish or offer of this restaurant, otherwise only your review will be published</string>
     <string name="review_published">Your review has been published, thank you!</string>
     <string name="insert_review">Fill in your review, please</string>
+    <string name="add_review">Add review</string>
+    <string name="make_reservation">Make a reservation</string>
 
 
 </resources>
