aggiornamento db cancellazione reservation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@
     <string name="add_review">Add review</string>
     <string name="make_reservation">Make a reservation</string>
     <string name="your_reservations">Your reservations</string>
+    <string name="reservation_canceled">Your reservation has been canceled</string>
 
 </resources>
