--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,7 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="pick_your_university">Pick your university site</string>
+    <string name="pick_type">Pick your category</string>
+    <string name="bio_hint">Write something about yourself, your interests and hobbies</string>
+    <string name="edit_user_profile_activity_title">Edit profile</string>
 </resources>
