--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -9,4 +9,5 @@
     <string name="wednesday_abb">M</string>
     <string name="tuesday_abb">M</string>
     <string name="monday_abb">L</string>
+    <string name="restaurant_address">Restaurant address</string>
 </resources>
