--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,6 +152,7 @@
     <string name="female">Female</string>
     <string name="pick_your_university">Pick your university site</string>
     <string name="pick_type">Pick your category</string>
+    <string name="pick_dish_type">Pick the dish type</string>
     <string name="bio_hint">Write something about yourself, your interests and hobbies</string>
     <string name="edit_user_profile_activity_title">Edit profile</string>
     <string name="title_activity_show_favourites">Favourites</string>
@@ -252,4 +253,5 @@
     <string name="wednesday_abb">We</string>
     <string name="tuesday_abb">Tu</string>
     <string name="monday_abb">Mo</string>
+    <string name="restaurant_address">Restaurant address</string>
 </resources>
