aggiunta schermata vuota quando la recycleview è vuota per offerte e menu modifica menu e offerte : invece del tasto di edit si clicca sulla cardview dell'elemento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -254,4 +254,6 @@
     <string name="tuesday_abb">Tu</string>
     <string name="monday_abb">Mo</string>
     <string name="restaurant_address">Restaurant address</string>
+    <string name="add_dish">This section is empty now. Click on the plus button to add a new dish.</string>
+    <string name="add_offer">This section is empty now. Click on the plus button to add a new offer.</string>
 </resources>
