pulizia nelle cartelle values, unite stringhe, fatta traduzione per le stringhe e cercato di rimuovere hard code disattivata immagine emptyview per le disponibilità

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -2,12 +2,249 @@
 <resources>
     <string name="title_activity_show_favourites">Preferiti</string>
     <string name="title_activity_notifications">Notifiche</string>
-    <string name="sunday_abb">D</string>
-    <string name="saturday_abb">S</string>
-    <string name="friday_abb">V</string>
-    <string name="thursday_abb">G</string>
-    <string name="wednesday_abb">M</string>
-    <string name="tuesday_abb">M</string>
-    <string name="monday_abb">L</string>
-    <string name="restaurant_address">Restaurant address</string>
+    <string name="sunday_abb">Do</string>
+    <string name="saturday_abb">Sa</string>
+    <string name="friday_abb">Ve</string>
+    <string name="thursday_abb">Gi</string>
+    <string name="wednesday_abb">Me</string>
+    <string name="tuesday_abb">Ma</string>
+    <string name="monday_abb">Lu</string>
+    <string name="restaurant_address">Indirizzo ristorante</string>
+    <string name="accept">Accetta</string>
+    <string name="accepted">Accettate</string>
+    <string name="action_settings">Impostazioni</string>
+    <string name="add_dish">Questa sezione è vuota. Clicca sul pulsante più per aggiungere un nuovo piatto.</string>
+    <string name="add_offer">Questa sezione è vuota. Clicca sul pulsante più per aggiungere una nuova offerta.</string>
+    <string name="add_photo">Aggiungi foto</string>
+    <string name="add_review">Aggiungi recensione</string>
+    <string name="add_review_activity_title">Aggiungi recensione</string>
+    <string name="add_userphoto_activity_title">Aggiungi foto</string>
+    <string name="additional_info">Altre informazioni</string>
+    <string name="address">Indirizzo</string>
+    <string name="adm_employee">Impiegati </string>
+    <string name="april">Aprile</string>
+    <string name="are_you_staying">Mangi qui o porti via?</string>
+    <string name="attenzione">Attenzione</string>
+    <string name="ausgust">Agosto</string>
+    <string name="available">Disponibile</string>
+    <string name="available_on">Disponibile di:</string>
+    <string name="bio_hint">Scrivi qualcosa su di te.</string>
+    <string name="calendar">Calendario</string>
+    <string name="calendar_manager_toolbar">Calendario</string>
+    <string name="cancel">Annulla</string>
+    <string name="chose_library">Scegli dalla galleria</string>
+    <string name="click_stars">Tocca le stelle per valutare il ritorante</string>
+    <string name="client_registrazione"></string>
+    <string name="closed">Chiuso</string>
+    <string name="closed_restaurant">Il ristorante è chiuso</string>
+    <string name="contattaci">Contattaci</string>
+    <string name="costoFinder">Prezzo:</string>
+    <string name="covers">Cover</string>
+    <string name="createAccount">Crea un nuovo account</string>
+    <string name="creditcard">Pagamento con carta di credito</string>
+    <string name="dataSaved">I dati sono stati salvati</string>
+    <string name="day_friday">Ve</string>
+    <string name="day_monday">Lu</string>
+    <string name="day_saturday">Sa</string>
+    <string name="day_sunday">Do</string>
+    <string name="day_thursday">Gi</string>
+    <string name="day_tuedsday">Ma</string>
+    <string name="day_wednesday">Me</string>
+    <string name="december">Dicembre</string>
+    <string name="deleted">Cancellate</string>
+    <string name="description">Descrizione:</string>
+    <string name="details">Dettagli:</string>
+    <string name="dish">Piatto</string>
+    <string name="dishName">Nome del piatto</string>
+    <string name="dishPhoto">Foto</string>
+    <string name="dishPrice">Prezzo</string>
+    <string name="dishType">Tipologia piatto</string>
+    <string name="dishes">Dettagli piatto</string>
+    <string name="dishes_details">• Dettagli piatti:</string>
+    <string name="done">Fatto</string>
+    <string name="edit_user_profile_activity_title">Modifica profilo</string>
+    <string name="email"></string>
+    <string name="error_complete">Completa tutti i campi</string>
+    <string name="esegui_login">Esegui Login</string>
+    <string name="eseguireLogin">Esegui Login</string>
+    <string name="exceptionError">Ops, si è verificato un errore</string>
+    <string name="favoriti">Preferiti</string>
+    <string name="features">Caratteristiche:</string>
+    <string name="february">Febbraio</string>
+    <string name="female">Femmina</string>
+    <string name="first">Primi</string>
+    <string name="friday">Venerdì</string>
+    <string name="gallery_activity_title">Galleria</string>
+    <string name="howmany">Quanti posti vuoi prenotare?</string>
+    <string name="info_ricerca">(cerca per nome del ristorante, piatto o indirizzo)</string>
+    <string name="insert_review">Completa la recensione per continuare</string>
+    <string name="jenuary">Gennaio</string>
+    <string name="july">Luglio</string>
+    <string name="june">Giugno</string>
+    <string name="listaVuota">Lista vuota</string>
+    <string name="login_failed">Username o password errati, riprova</string>
+    <string name="logout_message">Non sei più loggato</string>
+    <string name="make_reservation">Nuova prenotazione</string>
+    <string name="male">Maschio</string>
+    <string name="manager_registrazione"></string>
+    <string name="march">Marzo</string>
+    <string name="may">Maggio</string>
+    <string name="modifica_profilo">Modifica profilo</string>
+    <string name="monday">Lunedì</string>
+    <string name="msgListaVuotaOfferte"></string>
+    <string name="music">Musica</string>
+    <string name="navigation_drawer_close">Nascondi navigation drawer</string>
+    <string name="navigation_drawer_open">Mostra navigation drawer</string>
+    <string name="nessun_risultato">Nessun ristorante trovato</string>
+    <string name="newAccount"><u>Crea  un nuovo account</u></string>
+    <string name="noServices">Nessun servizio</string>
+    <string name="no_email_client">Non è installato un client email su questo dispositivo</string>
+    <string name="no_item_in_order">Seleziona almeno un piatto</string>
+    <string name="nome_registrazione">Nome:</string>
+    <string name="not_available">Non disponibile</string>
+    <string name="notes">Note per il ristoratore:</string>
+    <string name="notesOffer">Note</string>
+    <string name="notifications">Notifiche</string>
+    <string name="notifications_manager_toolbar">Notifiche</string>
+    <string name="november">Novembre</string>
+    <string name="numReviewsText">Valutazione media su % recensioni</string>
+    <string name="october">Ottobre</string>
+    <string name="offer">Offerta</string>
+    <string name="offerName">Nome dell\'offerta</string>
+    <string name="offerPrice">Prezzo </string>
+    <string name="offer_image">Immagine offerta</string>
+    <string name="offer_name">Nome dell\'offerta:</string>
+    <string name="offers">Offerte</string>
+    <string name="offers_details">• Dettagli offerte:</string>
+    <string name="open_restaurant">Il ristorante è aperto</string>
+    <string name="opening_time">Orari d\'apertura</string>
+    <string name="orarioApertura">Ora Apertura</string>
+    <string name="orarioChiusura">Ora Chiusura</string>
+    <string name="orderBy">Ordine</string>
+    <string name="other">Altro</string>
+    <string name="otherDishesAvailable">(altri piatti sono disponibili)</string>
+    <string name="parking">Parcheggio</string>
+    <string name="password">password</string>
+    <string name="password_ripeat">Ripeti password:</string>
+    <string name="pending">Pendenti</string>
+    <string name="phone_number">Numero di telefono</string>
+    <string name="phone_number_with_col">• Numero di telefono:</string>
+    <string name="pick_date">Scegli una data!</string>
+    <string name="pick_dish_type">Seleziona una tipologia di piatto</string>
+    <string name="pick_time">Scegli un orario!</string>
+    <string name="pick_type">Seleziona la tua categoria</string>
+    <string name="pick_your_university">Seleziona la tua università</string>
+    <string name="prenotazioni">Prenotazioni</string>
+    <string name="professor">Insegnante</string>
+    <string name="quantity">Quantità</string>
+    <string name="query_troppo_corta">Chiave di ricerca troppo corta!</string>
+    <string name="query_troppo_lunga">Chiave di ricerca troppo lunga!</string>
+    <string name="rate_dishes_message">Clicca su SI se vuoi valutare i piatti e le offerte, NO per inviare subito la tua recensione</string>
+    <string name="rate_it">Valuta</string>
+    <string name="reject">Rifiuta</string>
+    <string name="rejectReasonText">Indica una motivazione:</string>
+    <string name="rejected">Rifiutate</string>
+    <string name="remove">Rimuovi</string>
+    <string name="remove_photo">Rimuovi</string>
+    <string name="reservation">Prenotazioni</string>
+    <string name="reservationExpired">Questa prenotazione è scaduta</string>
+    <string name="reservationVerified">Questa prenotazione è verificata</string>
+    <string name="reservation_added">Prenotazione inviata! Riceverai una notifica sullo stato al più presto</string>
+    <string name="reservation_canceled">La tua prenotazione è stata cancellata</string>
+    <string name="reserved_seats">Posti prenotati:</string>
+    <string name="reset">Reset</string>
+    <string name="restaurant">Ristorante</string>
+    <string name="restaurant_name">Nome ristorante</string>
+    <string name="review">Recensione:</string>
+    <string name="review_published">La tua recensione è stata pubblicata, grazie!</string>
+    <string name="reviewsStrPrev">% recensioni</string>
+    <string name="reviews_activity_title">Recensioni</string>
+    <string name="ricercaAvanzata">Ricerca Avanzata</string>
+    <string name="risultati_ricerca">Risultati ricerca:</string>
+    <string name="ritorna_al_login">Torna al login</string>
+    <string name="saturday">Sabato</string>
+    <string name="save">Salva</string>
+    <string name="save_manager_toolbar">Salva</string>
+    <string name="search">Cerca</string>
+    <string name="seats">• Posti prenotati:</string>
+    <string name="seats_string">posti </string>
+    <string name="seatsoutside">Posti all\'esterno</string>
+    <string name="second">Secondi</string>
+    <string name="section_format"></string>
+    <string name="segnala_problema">Segnala Problema</string>
+    <string name="send_mail">Invia email</string>
+    <string name="september">Settembre</string>
+    <string name="service_type_manager_registrazione">Servizio:</string>
+    <string name="student">Studente</string>
+    <string name="sunday">Domenica</string>
+    <string name="table">Tavolo</string>
+    <string name="table_with_orders">Tavolo con ordine</string>
+    <string name="yournotes">• Le tue note:</string>
+    <string name="your_reservations">Le tue prenotazioni</string>
+    <string name="your_reservation">La tua prenotazione</string>
+    <string name="your_order_details">I dettagli della tua prenotazione</string>
+    <string name="yes">Sì</string>
+    <string name="wifi">WiFi</string>
+    <string name="would_you_rate_dishes">Vuoi valutare un piatto?</string>
+    <string name="weeklyreapeted">Disponibile di</string>
+    <string name="wednesday">Mercoledì</string>
+    <string name="verified">VERIFICATA</string>
+    <string name="valutazioneFinder">Valutazione:</string>
+    <string name="user_type_registrazione">Che tipo di utente vuoi creare?</string>
+    <string name="università_registrazione">Università:</string>
+    <string name="tuesday">Martedì</string>
+    <string name="total">Totale:</string>
+    <string name="tomorrow">Domani</string>
+    <string name="today_not_available">L\'offerta non è disponibile oggi</string>
+    <string name="today">Oggi</string>
+    <string name="toast_when_sorted">Risultati ordinati</string>
+    <string name="titolo_ricerca">Cerca il ristorante:</string>
+    <string name="titolo_offerte_vicine">Offerte vicino a te </string>
+    <string name="titolo_main_activity">Cerca ristorante</string>
+    <string name="titolo_elaborazioneRicerche">Risultati</string>
+    <string name="titoloLocaleDefault">Nome locale non disponibile</string>
+    <string name="title_activity_reservations">Prenotazioni</string>
+    <string name="title_activity_new_offer">Nuova offerta</string>
+    <string name="title_activity_new_dish">Nuovo piatto</string>
+    <string name="title_activity_edit_restaurant_profile">Modifica profilo</string>
+    <string name="title_activity_edit_offers">Modifica offerte</string>
+    <string name="title_activity_edit_offer">Modifica offerta</string>
+    <string name="title_activity_edit_dish">Modifica piatto</string>
+    <string name="title_activity_edit_menu">Modifica menù</string>
+    <string name="title_activity_edit_availability">Oggi disponibile</string>
+    <string name="tipoLocaleFinder">Tipo:</string>
+    <string name="timeout_expired">Timeout scaduto</string>
+    <string name="thursday">Giovedì</string>
+    <string name="takeaway">Take-Away</string>
+    <string name="take_photo">Scatta foto</string>
+    <string name="takeAway_Restaurant"><![CDATA[Take Away & Tavolo]]></string>
+    <string name="takeAway" >Take-Away</string>
+    <string name="show_all">MOSTRA TUTTO</string>
+    <string name="show_other">MOSTRA ALTRO...</string>
+    <string name="mon">Lin:</string>
+    <string name="tue">Mar:</string>
+    <string name="wed">Mer:</string>
+    <string name="thu">Gio:</string>
+    <string name="fri">Ven:</string>
+    <string name="sat">Sab:</string>
+    <string name="telefono_registrazione"></string>
+    <string name="sun">Dom:</string>
+    <string name="time_table">Orario:</string>
+    <string name="Menu">Menu</string>
+    <string name="available_photos">foto presenti</string>
+    <string name="no_photos">Nessuna foto presente</string>
+    <string name="the_restaurant">Il ristorante \'</string>
+    <string name="new_offer_added">\' ha aggiunto una nuova offerta oggi!</string>
+    <string name="accepted_your_reserv">\' ha accettato la tua prenotazione</string>
+    <string name="today_available">Today available!</string>
+    <string name="orderbydate">Ordina dal più recente</string>
+    <string name="orderbyranking">Ordina per valutazione</string>
+    <string name="check_out"></string>
+    <string name="order_now">Ordina</string>
+    <string name="rejected_your_reserv">\' ha rifiutato la tua prenotazione</string>
+    <string name="short_description">Breve descrizione</string>
+    <string name="search_byplace">Cerca per indirizzo</string>
+    <string name="search_byrestaurant">Cerca per nome</string>
+    <string name="permission_denied_message">Negando i permessi l\'app non funzionerà correttamente</string>
+
 </resources>
